fix(css): remove header table align

--- a/_css/root/news.css
+++ b/_css/root/news.css
@@ -2,7 +2,6 @@
   font-weight: var(--font-weight-thick);
 }
 
-.news th,
 .news td {
   text-align: left;
 }
